results/SpecGenBench/conversational/log-AddLoop-2023_07_09_18_06_37.txt
public class AddLoop {
    
    /*@ public normal_behavior
      @    requires true;
      @    ensures \result == x + y;
      @    pure function @*/
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            
            //@ maintaining sum == x + y - n;
            //@ maintaining 0 <= n && n <= y;
            //@ decreases n;
            while (n > 0) {
                sum = sum + 1;
                n = n - 1;
            }
        } else {
            int n = -y;
            
            //@ maintaining sum == x + y + n;
            //@ maintaining 0 <= n && n <= -y;
            //@ decreases n;
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
            }
        }
        return sum;
    }
}
/home/max/Documents/JMLGPT/tmp/AddLoop.java:6: error: Expected an identifier, found end of JML comment instead
      @    pure function @*/
                         ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:6: error: ';' expected
      @    pure function @*/
                            ^
2 errors

java
public class AddLoop {
    
    /*@ public normal_behavior
      @    requires true;
      @    ensures \result == x + y;
      @    pure @*/
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            
            //@ maintaining sum == x + y - n;
            //@ maintaining 0 <= n && n <= y;
            //@ decreases n;
            while (n > 0) {
                sum = sum + 1;
                n = n - 1;
            }
        } else {
            int n = -y;
            
            //@ maintaining sum == x + y + n;
            //@ maintaining 0 <= n && n <= -y;
            //@ decreases n;
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
            }
        }
        return sum;
    }
}
/home/max/Documents/JMLGPT/tmp/AddLoop.java:1: error: class, interface, enum, or record expected
java
^
1 error

public class AddLoop {
    
    /*@ public normal_behavior
      @    requires true;
      @    ensures \result == x + y;
      @    pure @*/
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            
            //@ maintaining sum == x + y - n;
            //@ maintaining 0 <= n && n <= y;
            //@ decreases n;
            while (n > 0) {
                sum = sum + 1;
                n = n - 1;
            }
        } else {
            int n = -y;
            
            //@ maintaining sum == x + y + n;
            //@ maintaining 0 <= n && n <= -y;
            //@ decreases n;
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
            }
        }
        return sum;
    }
}
